<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ime_name">kasahorow</string>
    <string name="spell_checker_settings">kasahorow Speller Settings</string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="how_to_pointer_title">Welcome to kasahorow</string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020
    </string>
    <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">
        %s</xliff:g>\u0020\u0020
    </string>
    <string name="change_log_url">More:\u0020
        <xliff:g id="url">%s</xliff:g>
    </string>
    <string name="ime_name_beta">kasahorow BETA</string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="testers_version">Testers build!</string>
    <string name="language_root_tile">Language</string>
    <string name="language_keyboards_settings_tile">Enable keyboards and languages.</string>
    <string name="language_grammar_settings_tile">Configure correction behavior and other
        dictionaries.
    </string>
    <string name="language_tweaks_settings_tile">Tweaks and more.</string>
    <string name="ui_root_tile">UI</string>
    <string name="ui_theme_settings_tile">Pick and configure keyboard themes.</string>
    <string name="ui_effects_settings_tile">Keyboard effects and experience.</string>
    <string name="changelog">Change Log</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at the app store</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at the app
        store…
    </string>
    <string name="no_market_store_available">Could not find an app store on your device.\nUnable to
        search for add-ons!
    </string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="close_button">Close</string>
    <string name="added_word">Saved:\u0020
        <xliff:g id="word">%s</xliff:g>
    </string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:\u0020
        <xliff:g id="word">%s</xliff:g>
    </string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
    <string name="voice_input_not_installed_text">Voice Input is not installed on your device.\nThat
        can be easily fixed: install it now from the app store.
    </string>
    <string name="voice_input_not_installed_action_install">Install</string>
    <string name="voice_input_not_installed_action_do_not_install">No</string>
    <string name="voice_input_not_voice_pack_in_market">I can not find voice input
        (com.google.android.voicesearch) in the app store. Sorry, voice input will not work on your
        device.
    </string>
    <string name="change_ime">Change input method</string>
    <string name="override_dictionary">Override default dictionary</string>
    <string name="override_dictionary_title">Override\u0020<xliff:g id="word">%s</xliff:g>\u0020dictionary
    </string>
    <string name="gesture_settings">Gestures</string>
    <string name="effects_group">Effects</string>
    <string name="ime_settings">Keyboard settings</string>
    <string name="switch_incognito">Incognito Mode</string>
    <string name="vibrate_on_key_press_title">Vibrate on key-press</string>
    <string name="vibrate_on_key_press_summary">Vibration level feedback for key-press. Currently:
        %s
    </string>
    <string name="vibrate_on_key_press_dialog_title">Select vibration type</string>
    <string-array name="vibrate_on_key_press_types">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>
    <string name="pop_text_type_title">Pop typed text from keys</string>
    <string name="pop_text_type_summary">When to pop text out of pressed keys. Currently: %s
    </string>
    <string name="pop_text_type_dialog_title">Select pop-text type</string>
    <string name="pop_text_type_never">Never</string>
    <string name="pop_text_type_on_correction">On word correction</string>
    <string name="pop_text_type_on_word">On any word</string>
    <string name="pop_text_type_any_key">On any key</string>
    <string name="input_field_type_password">Password input field</string>
    <string name="input_field_type_email">Email input field</string>
    <string name="input_field_type_url">URL input field</string>
    <string name="input_field_type_im">Messaging input field</string>
    <string name="sound_on">Sound on key-press</string>
    <string name="sound_on_summary">Sound effects on soft keyboard press.</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s
        notifications volume.
    </string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when
        pressing space
    </string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to
        alphabet when pressing space
    </string>
    <string name="persistent_layout_per_package_id_title">Remember alphabet layout per App</string>
    <string name="persistent_layout_per_package_id_off_summary">Use the same layout for all Apps.
    </string>
    <string name="persistent_layout_per_package_id_on_summary">Automatically switch to the previous
        layout used in the App.
    </string>
    <string name="one_shot_quick_text_popup">Auto close after key-press</string>
    <string name="one_shot_quick_text_popup_on_summary">Close Quick-Text popup after pressing a
        key
    </string>
    <string name="one_shot_quick_text_popup_off_summary">Keep Quick-Text popup open until Close key
        is pressed
    </string>
    <string name="quick_text_tags_search">Suggest Emojis by tag typing</string>
    <string name="quick_text_tags_search_on_summary">Search emojis by tag, when typing starts with
        colon (:)
    </string>
    <string name="quick_text_tags_search_off_summary" />
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is
        used
    </string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is
        used
    </string>
    <string name="fullscreen_input_connection_supported">Use full-screen editor in landscape
    </string>
    <string name="fullscreen_input_connection_supported_on_summary">Take over the screen when
        entering text in landscape
    </string>
    <string name="fullscreen_input_connection_supported_off_summary">Do not use full-screen editor
        in landscape
    </string>
    <string name="fullscreen_portrait_input_connection_supported">Use full-screen editor in
        portrait
    </string>
    <string name="fullscreen_portrait_input_connection_supported_on_summary">Take over the screen
        when entering text in portrait
    </string>
    <string name="fullscreen_portrait_input_connection_supported_off_summary">Do not use full-screen
        editor in portrait
    </string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character
    </string>
    <string name="swipe_tweak_group">Change swipe gesture actions</string>
    <string name="swipe_up_action">Swipe up</string>
    <string name="swipe_up_action_summary">Define the swipe up gesture action. Currently, %s
    </string>
    <string name="swipe_up_action_title">Select swipe up action</string>
    <string name="swipe_up_from_spacebar_action">Swipe spacebar up</string>
    <string name="swipe_up_from_spacebar_action_summary">Define the swipe up from spacebar gesture
        action. Currently, %s
    </string>
    <string name="swipe_up_from_spacebar_action_title">Select swipe spacebar up action</string>
    <string name="swipe_down_action">Swipe down</string>
    <string name="swipe_down_action_summary">Define the swipe down gesture action. Currently, %s
    </string>
    <string name="swipe_down_action_title">Select swipe down action</string>
    <string name="swipe_left_action">Swipe left</string>
    <string name="swipe_left_action_summary">Define the swipe left gesture action. Currently, %s
    </string>
    <string name="swipe_left_action_title">Select swipe left action</string>
    <string name="swipe_right_action">Swipe right</string>
    <string name="swipe_right_action_summary">Define the swipe right gesture action. Currently, %s
    </string>
    <string name="swipe_right_action_title">Select swipe right action</string>
    <string name="swipe_right_space_bar_action">Space bar swipe right</string>
    <string name="swipe_right_space_bar_action_summary">Define the swipe right from space bar
        gesture action. Currently, %s
    </string>
    <string name="swipe_right_space_bar_action_title">Select swipe right action</string>
    <string name="swipe_left_space_bar_action">Space bar swipe left</string>
    <string name="swipe_left_space_bar_action_summary">Define the swipe left from space bar gesture
        action. Currently, %s
    </string>
    <string name="eng_keyboard">English</string>
    <string name="dvorak_keyboard">Dvorak</string>
    <string name="compact_keyboard">EN Compact</string>
    <string name="terminal_keyboard">Terminal</string>
    <string name="colemak_keyboard">Colemak</string>
    <string name="ak_keyboard">Akan</string>
    <string name="ak_desc">Write Akan for Twi, Fanti, Akuapem, Nzema, Baule speakers.</string>
    <string name="ge_keyboard">Ga</string>
    <string name="ge_desc">Write Ga for Ga, Ga-Dangme, Krobo speakers.</string>
    <string name="ee_keyboard">Gbe</string>
    <string name="ee_desc">Write Gbe for Ewe, Fon speakers.</string>
    <string name="ha_keyboard">Hausa</string>
    <string name="ha_desc">Write Hausa.</string>
    <string name="yo_keyboard">Yoruba</string>
    <string name="yo_desc">Write Yoruba.</string>
    <string name="azerty_keyboard">Fronsei</string>
    <string name="fr_desc">Ecrivez Français</string>
    <string name="ff_keyboard">Fula</string>
    <string name="ff_desc">Write Fula for Fufulde, Pulaar, Pular speakers.</string>
    <string name="kik_keyboard">Gikuyu</string>
    <string name="kik_desc">Write Gikuyu for Kikuyu speakers.</string>
    <string name="ig_keyboard">Igbo</string>
    <string name="ig_desc">Write Igbo.</string>
    <string name="wo_keyboard">Wolof</string>
    <string name="wo_desc">Write Wolof.</string>
    <string name="din_keyboard">Dinka</string>
    <string name="din_desc">Write Dinka</string>
</resources>